TESTS = \
  bridge_test.rb \
  edit_nic_name_test.rb \
  install_inf_convertor_test.rb \
  lan_items_helpers_test.rb \
  lan_udev_auto_test.rb \
  link_handlers_test.rb \
  netcard_test.rb \
  network_autoconfiguration_test.rb \
  new_device_startmode_test.rb \
  read_hardware_test.rb \
  routing_test.rb \
  suse_firewall_4_network_test.rb \
  widgets_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec --format doc
VERBOSE = 1
EXTRA_DIST = $(TESTS)
