TESTS = \
  bridge_test.rb \
  default_route_test.rb \
  edit_nic_name_test.rb \
  lan_items_helpers_test.rb \
  lan_items_read_test.rb \
  lan_test.rb \
  lan_udev_auto_test.rb \
  link_handlers_test.rb \
  network_autoconfiguration_test.rb \
  new_device_startmode_test.rb \
  suse_firewall_4_network_test.rb \
  complex_test.rb \
  udev_test.rb \
  ifroute_test.rb \
  s390_helpers_test.rb \
  build_lan_overview_test.rb \
  network_autoyast_test.rb \
  remote_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec --format doc
VERBOSE = 1
EXTRA_DIST = $(TESTS)
