TESTS = \
  alias_dialog_test.rb \
  bond_test.rb \
  bridge_test.rb \
  build_lan_overview_test.rb \
  complex_test.rb \
  default_route_test.rb \
  dns_service_test.rb \
  dns_test.rb \
  edit_nic_name_test.rb \
  firewall_stage1_proposal_test.rb \
  host_test.rb \
  ifroute_test.rb \
  install_inf_convertor_test.rb \
  lan_items_export_test.rb \
  lan_items_helpers_test.rb \
  lan_items_read_test.rb \
  lan_items_rollback_test.rb \
  lan_test.rb \
  lan_udev_auto_test.rb \
  link_handlers_test.rb \
  netcard_test.rb \
  network_autoconfiguration_test.rb \
  network_autoyast_test.rb \
  new_device_startmode_test.rb \
  read_hardware_test.rb \
  remote_test.rb \
  routines_test.rb \
  routing_test.rb \
  s390_helpers_test.rb \
  suse_firewall_4_network_test.rb \
  udev_test.rb \
  widgets_test.rb \
  yaml_defaults_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec --format doc
VERBOSE = 1
EXTRA_DIST = $(TESTS)
